# near-tee-rng

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: bulid.yml  test.yml
contracts/tee-rng/: Cargo.toml  README.md
contracts/tee-rng/src/: admin.rs  collateral.rs  events.rs  lib.rs  upgrade.rs  view.rs
contracts/tee-rng/tests/: constants.rs  test_basics.rs  utils.rs
contracts/tee-rng/tests/samples/: quote_collateral.json  tcb_info.json
worker/: .gitignore  .prettierrc  Dockerfile  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json
worker/env/: .env.example
worker/scripts/: docker-publish.sh
worker/src/: app.ts  main.ts
worker/src/configs/: env.validation.ts  near.config.ts  rng.config.ts
worker/src/env/: .env.local
worker/src/interfaces/: near.interface.ts  rng.interface.ts
worker/src/services/: http.service.ts  logger.service.ts  near.service.ts  rng.service.ts  worker.service.ts
worker/src/utils/: agent.ts  load-env.ts  tappd.ts  worker.ts
